--- a/index.ipynb
+++ b/index.ipynb
@@ -11,10 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is an [IPython notebook (ipynb)](http://ipython.org/notebook.html) file. An ipynb file is a mixture between [Python](https://www.python.org/) source code and documentation. This file links to other ipynb files which describe in detail every genetic construction made as a part of this work using the software package [pydna](http://www.biomedcentral.com/1471-2105/16/142/abstract). \n",
+    "This is an [Jupyter notebook (ipynb)](http://jupyter.org/) file. An ipynb file is document containing a mixture between [Python](https://www.python.org/) source code and text. This file links to other ipynb files which describe in detail every genetic construction made as a part of this work (Pereira et al. 2015) using the software package [pydna](http://www.biomedcentral.com/1471-2105/16/142/abstract).\n",
     "\n",
-    "Since pydna in used, the documentation is executable on the users computer if downloaded. To execute the IPython notebooks, Python and [pydna](https://pypi.python.org/pypi/pydna/) must be installed. The simplest way to install Python on any computer is to install a free Python distribution for Scientific computing, such as [Anaconda](https://store.continuum.io/cshop/anaconda/). Standard primers and additional information [ypk_std_primers](ypk_std_primers.ipynb).\n",
-    "\n"
+    "Since [pydna](http://www.biomedcentral.com/1471-2105/16/142/abstract) in used, the documentation is executable on the users computer if downloaded. To execute the Jupyter notebooks, Python and [pydna](https://pypi.python.org/pypi/pydna/) and its dependencies must be installed. The simplest way to acchieve this is to install the free Python distribution [Anaconda](https://store.continuum.io/cshop/anaconda/) for which there is a pydna [package](https://anaconda.org/BjornFJohansson/pydna) for most platforms.\n",
+    "\n",
+    "Standard primers and additional information on the yeast pathway kit can be found here [ypk_std_primers](ypk_std_primers.ipynb)."
    ]
   },
   {
@@ -41,20 +42,18 @@
     "## Single gene expression vectors\n",
     "\n",
     "\n",
-    "| Construct                        | Description                              | Genbank                                        | Notebook                                                                   |\n",
-    "|----------------------------------|------------------------------------------|------------------------------------------------|----------------------------------------------------------------------------|\n",
-    "| pYPK0_TEF1tp_PsXYL1_N272D_TDH3tp | Xylose reductase (N272D)                 | [genbank](pYPK0_TEF1tp_PsXYL1_N272D_TDH3tp.gb) | [notebook](pYPK0_TEF1tp_PsXYL1_N272D_TDH3tp.ipynb) |\n",
-    "| pYPK0_TEF1tp_PsXYL1_TDH3tp       | Xylose reductase (wt)                    | [genbank](pYPK0_TEF1tp_PsXYL1_TDH3tp.gb)       | [notebook](pYPK0_TEF1tp_PsXYL1_TDH3tp.ipynb)             |\n",
-    "| pYPK0_TDH3tp_PsXYL2_PGI1tp       | Xylitol dehydrogenase                    | [genbank](pYPK0_TDH3tp_PsXYL2_PGI1tp.gb)       | [notebook](pYPK0_TDH3tp_PsXYL2_PGI1tp.ipynb)             |\n",
-    "| pYPK0_PGI1tp_ScXKS1_FBA1tp       | Xylulose kinase                          | [genbank](pYPK0_PGI1tp_ScXKS1_FBA1tp.gb)       | [notebook](pYPK0_PGI1tp_ScXKS1_FBA1tp.ipynb)             |\n",
-    "| pYPK0_FBA1tp_ScTAL1_PDC1tp       | Transaldolase                            | [genbank](pYPK0_FBA1tp_ScTAL1_PDC1tp.gb)       | [notebook](pYPK0_FBA1tp_ScTAL1_PDC1tp.ipynb)             |\n",
-    "| pYPK0_PDC1tp_ScTKL1_RPS19btp     | Transketolase                            | [genbank](pYPK0_PDC1tp_ScTKL1_RPS19btp.gb)     | [notebook](pYPK0_PDC1tp_ScTKL1_RPS19btp.ipynb)         |\n",
-    "| pYPK0_RPS19btp_ScRPE1_RPS19atp   | ribulose-phosphate 3-epimerase           | [genbank](pYPK0_RPS19btp_ScRPE1_RPS19atp.gb)   | [notebook](pYPK0_RPS19btp_ScRPE1_RPS19atp.ipynb)     |\n",
-    "| pYPK0_RPS19atp_ScRKI1_TPI1tp     | ribose-5-phosphate isomerase             | [genbank](pYPK0_RPS19atp_ScRKI1_TPI1tp.gb)     | [notebook](pYPK0_RPS19atp_ScRKI1_TPI1tp.ipynb)         |\n",
-    "| pYPK0_TPI1tp_CiGXF1_ENO2tp       | C. intermedia GXF1 xylose transporter    | [genbank](pYPK0_TPI1tp_CiGXF1_ENO2tp.gb)       | [notebook](pYPK0_TPI1tp_CiGXF1_ENO2tp.ipynb)             |\n",
-    "| pYPK0_PGI1tp_CiGXF1_TDH3tp       | ?C. intermedia GXF1 xylose transporter?  | [genbank](pYPK0_PGI1tp_CiGXF1_TDH3tp.gb)       | [notebook](pYPK0_PGI1tp_CiGXF1_TDH3tp.ipynb)             |\n",
-    "\n",
-    "              "
+    "| Construct                    | Description                              | Genbank                                    | Notebook                                                                   |\n",
+    "|------------------------------|------------------------------------------|--------------------------------------------|----------------------------------------------------|\n",
+    "| pYPK0_TEF1_PsXYL1_N272D_TDH3 | Xylose reductase (N272D)                 | [genbank](pYPK0_TEF1_PsXYL1_N272D_TDH3.gb) | [notebook](pYPK0_TEF1_PsXYL1_N272D_TDH3.ipynb)     |\n",
+    "| pYPK0_TEF1_PsXYL1_TDH3       | Xylose reductase (wt)                    | [genbank](pYPK0_TEF1_PsXYL1_TDH3.gb)       | [notebook](pYPK0_TEF1_PsXYL1_TDH3.ipynb)           |\n",
+    "| pYPK0_TDH3_PsXYL2_PGI1       | Xylitol dehydrogenase                    | [genbank](pYPK0_TDH3_PsXYL2_PGI1.gb)       | [notebook](pYPK0_TDH3_PsXYL2_PGI1.ipynb)           |\n",
+    "| pYPK0_PGI1_ScXKS1_FBA1       | Xylulose kinase                          | [genbank](pYPK0_PGI1_ScXKS1_FBA1.gb)       | [notebook](pYPK0_PGI1_ScXKS1_FBA1.ipynb)           |\n",
+    "| pYPK0_FBA1_ScTAL1_PDC1       | Transaldolase                            | [genbank](pYPK0_FBA1_ScTAL1_PDC1.gb)       | [notebook](pYPK0_FBA1_ScTAL1_PDC1.ipynb)           |\n",
+    "| pYPK0_PDC1_ScTKL1_RPS19b     | Transketolase                            | [genbank](pYPK0_PDC1_ScTKL1_RPS19b.gb)     | [notebook](pYPK0_PDC1_ScTKL1_RPS19b.ipynb)         |\n",
+    "| pYPK0_RPS19b_ScRPE1_RPS19a   | ribulose-phosphate 3-epimerase           | [genbank](pYPK0_RPS19b_ScRPE1_RPS19a.gb)   | [notebook](pYPK0_RPS19b_ScRPE1_RPS19a.ipynb)       |\n",
+    "| pYPK0_RPS19a_ScRKI1_TPI1     | ribose-5-phosphate isomerase             | [genbank](pYPK0_RPS19a_ScRKI1_TPI1.gb)     | [notebook](pYPK0_RPS19a_ScRKI1_TPI1.ipynb)         |\n",
+    "| pYPK0_TPI1_CiGXF1_ENO2       | C. intermedia GXF1 xylose transporter    | [genbank](pYPK0_TPI1_CiGXF1_ENO2.gb)       | [notebook](pYPK0_I1_CiGXF1_ENO2.ipynb)             |\n",
+    "| pYPK0_PGI1_CiGXF1_TDH3       | ?C. intermedia GXF1 xylose transporter?  | [genbank](pYPK0_PGI1_CiGXF1_TDH3.gb)       | [notebook](pYPK0_PGI1_CiGXF1_TDH3.ipynb)           |"
    ]
   },
   {
@@ -184,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
